# qrcodr

./: .dockerignore  Dockerfile  README.md  pyproject.toml  qrcodr.py
.github/workflows/: ci.yml  docker-image.yml  release-binaries.yml
src/qrcodr/: __init__.py  __main__.py  _build_version.py  app.py  cli.py  core.py  version.py
tests/: test_cli.py  test_core.py
tests/smoke/: _utils.py  test_smoke_cli.py  test_smoke_docker.py  test_smoke_gui.py
