[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "qrcodr"
version = "0.1.0"
description = "Desktop QR code generator that exports PNG, SVG, and PDF"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "qrcodr contributors" }
]
dependencies = [
  "qrcode[pil]>=7.4,<9",
  "reportlab>=4,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pyinstaller>=6.0,<7",
  "opencv-python-headless>=4.10,<5",
]

[project.scripts]
qrcodr = "qrcodr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qrcodr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "smoke: end-to-end smoke tests for CLI and GUI flows",
]
